--- a/dr/42/wishlist/index.html
+++ b/dr/42/wishlist/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎂 Мій Вішліст на День Народження 2025</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <link rel="stylesheet" href="robot-stars.css">
     <style>
         * {
             margin: 0;
@@ -717,6 +718,11 @@
                 supabase.removeChannel(realtimeChannel);
             }
         });
+    </script>
+    <script src="robot-stars.js"></script>
+    <script>
+        // Инициализация с настройками по умолчанию
+        const robotStars = new RobotStars();
     </script>
 </body>
 </html>
