--- a/now/index.html
+++ b/now/index.html
@@ -13,27 +13,27 @@
 
 <div style="padding-top: 20px; padding-bottom: 40px; font-size: 16pt; line-height: 24pt; ">
   <ul>
-    <li>💻️ Focused on developing my own (NUXT) diary application using Supabase.</li>
-    <li>📋️ Also working on a task management (VUE) program styled like cards and columns.</li>
-    <li>🤖️ More actively maintaining my repository and website where I document how to effectively use AI for coding assistance and development.</li>
-    <li>📚️ Continued my LEGO research by reading the catalog book.</li>  
+    <li>🤖️ Continuing my "AI for Code Generation" review series, including a year-in-review.</li> 
+    <li>💻️ Developing my personal journaling app (NUXT, Supabase) and experimenting with vectorization using Pinecone.</li>
+    <li>📋️ Also working on a task management web app (VUE) featuring a card and column-based interface.</li>
+    <li>📚️ Taking courses in Product Management and Negotiations. </li> 
     <br>
     <li>🕊️ <i>Continuing to hope for a close end to the war and a peaceful future</i></li>
 </ul>  
 </div>
 <div style="padding-top: 20px; padding-bottom: 40px; font-size: 16pt; line-height: 24pt; ">
   <ul>
-    <li>💻️ Зосередився на розробці власної системи (NUXT) додатка-щоденника, використовуючи Supabase.</li>
-    <li>📋️ Також працю над програмою для управління завданнями (VUE), стилізованою під картки та колонки.</li>
-    <li>🤖️ Активніше підтримую свій репозиторій та вебсайт, де документую, як ефективно використовувати ШІ для допомоги в кодуванні та розробці.</li>
-    <li>📚️ Продовжив своє дослідження LEGO, читаючи каталог-книгу.</li>  
+    <li>🤖️ Далі продовжую вести огляди "ШІ для генерації коду", підсумки року.</li>
+    <li>💻️ Продовжую розробку власної закритої системи (NUXT, Supabase) додатка-щоденника, тестую можливості Pinecone векторизації.</li>
+    <li>📋️ Також працю над веб-додатком для управління завданнями (VUE), стилізованою під картки та колонки.</li>
+    <li>📚️ Проходження "Управління продуктами" та "Перемовини" курсів.</li>  
     <br>
-    <li>🕊️ <i>Продовжу надіятися на близький кінець війни та мирний майбутнє</i></li>
+    <li>🕊️ <i>Надія на близький кінець війни та мирне майбутнє</i></li>
 </ul>  
 </div>
 <hr/>
-  <span style="font-size: 12pt;">autumn 2025. Kyiv, UA<span> |
-    <span style="font-size: 12pt;">осінь 2025. Київ, Україна<span></span>
+  <span style="font-size: 12pt;">winter 2025-26. Kyiv, UA<span> |
+    <span style="font-size: 12pt;">зима 2025-26. Київ, Україна<span></span>
 
 </div>
 <script src='../dan-files/js/ga.js'></script></body></html>
